@@ -70,6 +70,11 @@ Cacti CHANGELOG
 -bug#0001342: VRULE printed as HRULE on graph_templates.php graph template item list
 -bug#0001351: Deleting 1000 graphs along with their Data Sources crashes the Server
 -bug#0001359: Better error checking in rrd.php
+-bug#0001374: ss_host_disk.php etc. error corrected when using SNMP V3 (index off by 1)
+-bug#0001376: graph_items.php variable $id defined in wrong place
+-bug#0001378: ping.pl script fails when using tcp:hostname    
+-bug#0001382: cdef.php error due to wrong function name
+-bug#0001383: syntax error in lib/rrd.php with PHP 4.4.4
 -feature: Pagainate Treeview Dual Pane
 -feature: Allow user to specify maximum graphs per page from Treeview Dual Pane
 -feature: Allow Treeview Dual Pane to be filtered for graph titles
